ps-scrollbar fix. Group create private url redirect with private_url param fix

--- a/app/javascript/css/application.sass
+++ b/app/javascript/css/application.sass
@@ -3,7 +3,7 @@
 
 html
   scroll-behavior: smooth
-  overflow-y: auto
+  overflow-y: hidden
 
   body
     color: #ababab
@@ -12,6 +12,9 @@ html
     flex-direction: column
     height: 100vh
 
+.box
+  color: #ababab
+  background-color: #211b17
 
 .vertical-center-content
   align-items: center
@@ -21,3 +24,9 @@ html
 
 .checkbox:hover
   color: #fff
+
+.title
+  color: #ffab40
+
+main
+  flex-grow: 1
