--- a/app/javascript/css/groups/new.scss
+++ b/app/javascript/css/groups/new.scss
@@ -1,9 +1,5 @@
 @import 'trix.css';
 
-main {
-  flex-grow: 1;
-}
-
 .groups_create {
   position: relative;
   padding: 3rem 2rem;
